@@ -28,7 +28,17 @@
 			<version>5.9.1</version>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -38,6 +48,70 @@
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>3.6.0.1398</version>
 			</plugin>
+			<plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-surefire-plugin</artifactId>
+	<version>2.22.2</version>
+	<configuration>
+		<argLine>
+			--illegal-access=permit
+		</argLine>
+		<testFailureIgnore>true</testFailureIgnore>
+		<forkCount>2</forkCount>
+		<reuseForks>true</reuseForks>
+		<argLine>${surefireArgLine}</argLine> 
+	</configuration>
+</plugin>
+
+<plugin>
+	<groupId>org.jacoco</groupId>
+	<artifactId>jacoco-maven-plugin</artifactId>
+	<version>0.8.7</version>
+	<executions>
+		<execution>
+			<id>default-prepare-agent</id>
+			<goals>
+				<goal>prepare-agent</goal>
+			</goals>
+			<configuration>
+				<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
+				<propertyName>surefireArgLine</propertyName>
+			</configuration>
+		</execution>
+		<execution>
+			<id>default-report</id>
+			<phase>test</phase>
+			<goals>
+				<goal>report</goal>
+			</goals>
+			<configuration>
+				<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
+				<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+			</configuration>
+		</execution>
+		<execution>
+			<id>default-check</id>
+			<goals>
+				<goal>check</goal>
+			</goals>
+			<configuration>
+				<rules>
+					<rule>
+						<element>BUNDLE</element>
+						<limits>
+							<limit>
+								<counter>COMPLEXITY</counter>
+								<value>COVEREDRATIO</value>
+								<minimum>0.70</minimum>
+							</limit>
+						</limits>
+					</rule>
+				</rules>
+			</configuration>
+		</execution>
+	</executions>
+</plugin>
 		</plugins>
 	</build>
+
 </project>
